Fix non-wrapping content

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -182,8 +182,6 @@ pre {
   margin-left: auto;
   padding-right: $spacing-unit / 2;
   padding-left: $spacing-unit / 2;
-  display: flex;
-  align-items: center;
   @extend %clearfix;
 
   @media screen and (min-width: $on-large) {
@@ -210,7 +208,6 @@ pre {
   fill: $text-color;
   padding: 2px 2px 2px 2px;
   vertical-align: text-bottom;
-
 }
 
 /**
