--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -4,37 +4,37 @@
 .site-header {
   min-height: $spacing-unit * 1.865;
   line-height: $base-line-height * $base-font-size * 2.25;
-  box-shadow: 0px 2px 2px 2px rgba(0, 0, 0, 0.3);
 }
 
 .site-title {
   @include relative-font-size(1.625);
   font-weight: 500;
   letter-spacing: -1px;
-  margin-bottom: 0;
-  text-align: center;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  padding-top: $spacing-unit / 4;
 
   &,
   &:visited {
     color: $text-color;
   }
 
-  @media screen and (max-width: 320px) {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
+  @media screen and (min-width: 325px) {
+    flex-direction: row;
+    padding-top: 0;
   }
 }
 
 .site-logo {
   float: left;
-  width: 32px;
-  margin-right: $spacing-unit / 4;
+  width: 48px;
+  margin-right: 0;
   border-radius: 50%;
 
-  @media screen and (max-width: 320px) {
-    width: 48px;
-    margin-right: 0;
+  @media screen and (min-width: 325px) {
+    width: 32px;
+    margin-right: $spacing-unit / 4;
   }
 }
 
@@ -51,7 +51,6 @@
 .page-content {
   flex: 1 0 auto;
   padding-top: $spacing-unit / 2;
-  box-shadow: 0px 2px 2px 2px rgba(0, 0, 0, 0.3);
 }
 
 .page-heading {
